# actix-oauth2-api

./: .env.example  .gitignore  Cargo.toml  README.md  test-script-01.sh
src/: main.rs
src/config/: mod.rs
src/handlers/: auth.rs
src/middleware/: jwt_auth.rs
src/models/: user.rs
src/utils/: db.rs  hash.rs  jwt.rs  mod.rs
